Fix typos and improve formatting in threading notes
- Corrected "withput" to "without" in the thread creation section.
- Added bullet points for clarity in the race condition explanation.
- Enhanced formatting for thread synchronization techniques by bolding the titles.

--- a/Python/Threading/notes.ipynb
+++ b/Python/Threading/notes.ipynb
@@ -733,7 +733,7 @@
    "id": "58ddd53d",
    "metadata": {},
    "source": [
-    "# Creating a thread withput creating a child class to Thread class\n",
+    "# Creating a thread without creating a child class to Thread class\n",
     "---\n",
     "We can create an independent thread child class that does not inherit from Thread Class from threading module.\n",
     "Syntax:\n",
@@ -968,8 +968,8 @@
    "source": [
     "# Race Condition\n",
     "---\n",
-    "Race condition is a situation that occurs when threads are acting in an unexpected sequence sequence, thus leading to unreliable output.\n",
-    "This can be eliminated using thread sunchronization."
+    "- Race condition is a situation that occurs when threads are acting in an unexpected sequence, thus leading to unreliable output.\n",
+    "- This can be eliminated using thread sunchronization."
    ]
   },
   {
@@ -982,9 +982,9 @@
     "Many threads trying to access the same object can lead to problem like making data inconsistent or getting unexpected output So When a thread  is already accessing an object, preventing any other thread accessing the same object is called Thread Synchronization.\n",
     "The object on which the threads are synchronized is called Synchronized Object or **Mutually Exclusive Lock(mutex)**\n",
     "There are following techniques to do Thread Synchronization\n",
-    "- Using Locks\n",
-    "- Usiing RLock (Re-Entrant Lock)\n",
-    "- Using Semaphores"
+    "- **Using Locks**\n",
+    "- **Usiing RLock (Re-Entrant Lock)**\n",
+    "- **Using Semaphores**"
    ]
   },
   {
